<resources>
    <string name="app_name">BeU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_first_screen">Cooking Tutorials</string>
    <string name="subtitle_first_screen">Find cooking tutorials that match your desired category.</string>
    <string name="title_second_screen"><![CDATA[Order & Delivery]]></string>
    <string name="subtitle_second_screen">We provide the ingredients that fit the size of the cooking tutorial and we deliver the ingredients to your home.</string>
    <string name="title_third_screen">Food Image Recognition</string>
    <string name="subtitle_third_screen">You can search for recipes by pointing the camera at the food.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">forget password?</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="do_not_have_any_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_accounts">Already have an account?</string>
    <string name="location">Location</string>
    <string name="home">Home</string>
    <string name="voucher">Voucher</string>
    <string name="place_holder">Place Holder</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="board">Board</string>
    <string name="beu_pay">BeU-Pay</string>
    <string name="top_up">Top up</string>
    <string name="payment">Payment</string>
    <string name="referral">Referral</string>
    <string name="category">Category</string>
    <string name="diet_menu">Diet Menu</string>
    <string name="voucher_shop">Voucher Shop</string>
    <string name="voucher_attention">Pick any voucher from below</string>
    <string name="shipping_voucher">Shipping Voucher</string>
    <string name="product_voucher"><![CDATA[Discount & Cashback]]></string>
    <string name="your_vouchers">Your Vouchers</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="information">Information</string>
    <string name="ok">Ok</string>
    <string name="example_leaderboard_dialog_description">You are currently at rank 7. Keep increasing your orders to earn more XP points.</string>
    <string name="leaderboard_dialog_description">You are currently at rank %d with %d XP. Keep increasing your orders to earn more XP points.</string>
    <string name="account">Account</string>
    <string name="more_info">More Info</string>
    <string name="description">Description</string>
    <string name="estimate_time">Estimated time</string>
    <string name="benefit">Benefit</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="tools">Tools</string>
    <string name="ratings">Ratings</string>
    <string name="list">List</string>
    <string name="availability">Availability of Materials</string>
    <string name="order">Order</string>
    <string name="choose_ingredients">Choose Ingredients:</string>
    <string name="redeem">Redeem</string>
    <string name="change">Change</string>
    <string name="shipping_detail">Shipping Detail</string>
    <string name="price">Price</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="discount">Discount</string>
    <string name="admin">Admin</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="view_all">View all</string>
    <string name="check_in">Check-in</string>
    <string name="exclusive_menu">Exclusive Menu</string>
</resources>