<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/navigation_voucher"
        android:title="@string/voucher"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_bag"
        />

    <item
        android:id="@+id/navigation_placeholder"
        android:title=""
        android:enabled="true"
        />

    <item
        android:id="@+id/navigation_leaderboard"
        android:title="@string/board"
        android:enabled="true"
        android:icon="@drawable/ic_leaderboard"/>

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"/>

</menu>