<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_ilu_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:startIconDrawable="@drawable/ic_email_indicator_non_focused">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:endIconDrawable="@drawable/ic_password_toggle_indicator_hide"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:startIconDrawable="@drawable/ic_password_indicator">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.suke.widget.SwitchButton
        android:id="@+id/sb_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:sb_checked="true"
        app:sb_checked_color="@color/primary_900" />

    <TextView
        android:id="@+id/tv_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/remember_me"
        android:textColor="@color/neutral_900"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/sb_remember_me"
        app:layout_constraintStart_toEndOf="@id/sb_remember_me"
        app:layout_constraintTop_toTopOf="@id/sb_remember_me" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/forget_password"
        android:textColor="@color/primary_900"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/sb_remember_me"
        app:layout_constraintEnd_toEndOf="@id/til_password"
        app:layout_constraintTop_toTopOf="@id/sb_remember_me" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary_500"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="8dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sb_remember_me" />

    <TextView
        android:id="@+id/tv_or_decision_login_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_using_gmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="12dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/neutral_900"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/tv_or_decision_login_method"
        app:strokeColor="@color/neutral_300"
        app:strokeWidth="0.5dp" />

    <TextView
        android:id="@+id/tv_do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/do_not_have_any_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_fake_register"
        app:layout_constraintStart_toStartOf="@id/btn_login_using_gmail"
        app:layout_constraintTop_toBottomOf="@id/btn_login_using_gmail" />

    <TextView
        android:id="@+id/tv_fake_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/register"
        android:textColor="@color/primary_900"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tv_do_not_have_account"
        app:layout_constraintEnd_toEndOf="@id/btn_login_using_gmail"
        app:layout_constraintStart_toEndOf="@id/tv_do_not_have_account"
        app:layout_constraintTop_toTopOf="@id/tv_do_not_have_account" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/inter"
        android:text="@string/register"
        android:textColor="@color/primary_900"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_do_not_have_account"
        app:layout_constraintStart_toEndOf="@id/tv_do_not_have_account"
        app:layout_constraintTop_toTopOf="@id/tv_do_not_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>