<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_blue"
    android:paddingHorizontal="16dp"
    android:paddingVertical="12dp">

    <LinearLayout
        android:id="@+id/ll_beu_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/card_white"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_beu_pay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/beu_pay"
            android:textColor="@color/primary_700"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_beu_pay_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/neutral_900"
            android:textSize="20sp"
            tools:text="0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_beu_pay_options"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_beu_pay"
        app:layout_constraintTop_toTopOf="@id/ll_beu_pay"
        app:layout_constraintBottom_toBottomOf="@id/ll_beu_pay">

        <LinearLayout
            android:id="@+id/btn_top_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_topup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/top_up"
                android:textColor="@color/neutral_50"
                android:fontFamily="@font/montserrat"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_payment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/payment"
                android:textColor="@color/neutral_50"
                android:fontFamily="@font/montserrat"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_pig_checkin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/check_in"
                android:textColor="@color/neutral_50"
                android:fontFamily="@font/montserrat"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>