<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:background="@drawable/card_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_dialog_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/information"
            android:textColor="@color/neutral_900"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_close"
            app:layout_constraintStart_toEndOf="@id/iv_close"
            app:layout_constraintTop_toTopOf="@id/iv_close" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ilu_default_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_desc_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/example_leaderboard_dialog_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="@id/iv_close"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/ok"
            android:backgroundTint="@color/primary_500"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_rank" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>